# Zebraprinter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
Tests/: test_pytemplate.py
application_files/: L2_printing.py  all_label_gui.py  cell_printing_application.py  label_gui.py  zebra_mod.py
docs/: Changelog.md  Resources.md
input/: Print Box Label.bat  Print L2.bat  Print ProcessBox Label.bat  Print WorkOrder.bat  Print cells.bat  Print excel.bat  Print_File.xlsb  Print_File2.xlsb  TEST.bat  core print.bat  vba.txt
reports/flake8/: index.html
src/: CAPA.py  EL_labels.py  L2_dryroom.py  all_label_gui.py  boxlabels.py  cell.py  cell_barcode.py  cell_individual.py  cell_printing_application.py  cell_workorder.py  cell_workorder_ea.py  core.py  excel_cell.py  excel_manual.py  generalized_cell.py  helper.py  manual.py  manual_workorder.py  pouch.py  processboxlabels.py  shipping_label.py  single_cell_workorder.py  util.py  wo.py  wo_barcode.py  wo_workorder.py
src/archive/: CAPA.py  EL_labels.py  boxlabels.py  core.py  excel_manual.py  pouch.py  processboxlabels.py  shipping_label.py  util.py
src/unsupported/: L2_dryroom.py  shipping_label.py
