[build-system]
requires = ['setuptools >= 40.6.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'zebraPrinter'
version = '2023.03.23'
description = 'Intentionally left blank'
requires-python = '>=3.7'
license = {file = "LICENSE.txt"}
keywords = ['Python']
authors = [{email = 'kylekaptbone@yahoo.com'},{name = 'Kyle Patterson'}]
classifiers = ['Programming Language :: Python']
dynamic = ['readme']
dependencies = ['pyxlsb>=1.0.10', 'pandas>=1.5.2', 'SQLAlchemy<2.0','PyMySql>=1.0.2']

[tool.setuptools.dynamic]
readme = {file = ['README.md']}

[project.optional-dependencies]
dev = [
'flake8>=6.0.0',
'black>=22.10.0',
'flake8-html>=0.4.2',
'genbadge>=1.1.0',
'isort>=5.10.1',
'pytest>=7.1.2',
'coverage>=6.4.2',
'pre-commit>=2.20.0',
'defusedxml>=0.7.1',
'PyInstaller>=6.2.0'
]

[project.urls]
homepage = 'https://github.com/kylekap/zebraPrinter'
documentation = 'https://github.com/kylekap/zebraPrinter/tree/main/docs'
repository = 'https://github.com/kylekap/zebraPrinter'
changelog = 'https://github.com/kylekap/zebraPrinter/tree/main/Docs/Changelog.md'


[tool.black]
line-length = 120
target_version = ['py310']

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:"]

[tool.isort]
import_heading_firstparty = 'First-party/Local'
import_heading_future = 'Future'
import_heading_stdlib = 'Standard library'
import_heading_thirdparty = 'Third-party'
profile = 'black'